# agent-compose-kit

./: AGENTS.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  FULL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  RESUME_SESSION.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
agents/: index.html
config/: index.html
docs/: agents.md  api.md  config.md  examples.md  faq.md  graph.md  index.md  install.md  plan_lock.md  public_api.md  quickfixes.md  registries.md  services.md  tools.md
graph/: index.html
registries/: index.html
search/: search_index.json
services/: index.html
site/: 404.html  index.md  llms-full.txt  llms.txt
src/: __init__.py  cli.py  tui.py
tests/: conftest.py  helpers.py  test_a2a_remote_agent.py  test_agents_advanced_config.py  test_agents_builder_models.py  test_cli_commands.py  test_config_env.py  test_config_models.py  test_config_registry_integration.py  test_config_schema_export.py  test_declarative_registries_v5.py  test_fs_registry.py  test_function_tools.py  test_graph.py  test_graph_v2.py  test_llm_fields_v2.py  test_lock_plan_v4.py  test_main.py  test_mcp_registry.py  test_model_alias_registry_v6.py  test_openapi_registry.py  test_paths_and_public_api.py  test_phase1_schema_models.py  test_planner_v2.py  test_public_api_smoke.py  test_quickfix_v3.py  test_registries_discovery.py  test_registries_v2.py  test_registry.py  test_run_config.py  test_schema_polish_v3.py  test_schema_v2.py  test_serve_scaffold.py  test_server_app_import.py  test_server_endpoints.py  (+12 more)
(+53 files in other folders)
