[project]
name = "template-agent-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # The following are runtime deps for full functionality; install via uv if preferred
    "google-adk>=0.1.0", # provides Runner, LlmAgent, services
    "adk-extra-services>=0.1.0", # optional: redis/mongo/s3/local services
    "litellm>=1.76.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
